--- a/src/less/screen.less
+++ b/src/less/screen.less
@@ -33,6 +33,7 @@
 @import 'lightbox.less';
 @import 'searchbar.less';
 @import 'fontawesome.less';
+@import 'repos.less';
 
 /*====================================================
 	about author and comment and next-prev link
