--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -16,8 +16,8 @@
 				<p>{{content}}</p>
 				<div class="github-cards">
   <a href="https://github.com/toddbirchard/ghosttheme-stockholm" class="github-card" data-github="toddbirchard/ghosttheme-stockholm">
-    <h3>ghosttheme-stockholm</h3>
-    <p>Clean & minimalist theme</p>
+    <h3 class="repo-title">ghosttheme-stockholm</h3>
+    <p class="repo-description">Clean & minimalist theme</p>
     <span class="github-card__meta">
       <span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
     </span>
@@ -36,8 +36,8 @@
   </a>
 
    <a href="https://github.com/toddbirchard/ghosttheme-tokyo" class="github-card" data-github="toddbirchard/ghosttheme-tokyo">
-    <h3>ghosttheme-tokyo</h3>
-    <p>Ghost theme used on Toddzilla blog</p>
+    <h3 class="repo-title">ghosttheme-tokyo</h3>
+    <p class="repo-description">Ghost theme used on Toddzilla blog</p>
     <span class="github-card__meta">
       <span class="github-card__language-icon" style="color: #F1E05A;">●</span> Javascript
     </span>
@@ -56,8 +56,8 @@
   </a>
 
   <a href="https://github.com/toddbirchard/Link-Preview-API" class="github-card" data-github="toddbirchard/Link-Preview-API">
-    <h3>Link-Preview-API</h3>
-    <p>Generates a JSON object containing link preview information by passing a URL parameter.</p>
+    <h3 class="repo-title">Link-Preview-API</h3>
+    <p class="repo-description">Generates a JSON object containing link preview information by passing a URL parameter.</p>
     <span class="github-card__meta">
       <span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
     </span>
@@ -76,8 +76,8 @@
   </a>
 
  <a href="https://github.com/toddbirchard/account-creation-endpoint" class="github-card" data-github="toddbirchard/account-creation-endpoint">
-    <h3>account-creation-endpoint</h3>
-    <p>Serverless function which creates and welcomes new users.</p>
+    <h3 class="repo-title">account-creation-endpoint</h3>
+    <p class="repo-description">Serverless function which creates and welcomes new users.</p>
     <span class="github-card__meta">
       <span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
     </span>
@@ -96,8 +96,8 @@
   </a>
 
   <a href="https://github.com/toddbirchard/planetjupyter" class="github-card" data-github="toddbirchard/planetjupyter">
-    <h3>planetjupyter</h3>
-    <p>Beautify your Jupyter Notebooks.</p>
+    <h3 class="repo-title">planetjupyter</h3>
+    <p class="repo-description">Beautify your Jupyter Notebooks.</p>
     <span class="github-card__meta">
       <span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
     </span>
@@ -116,8 +116,8 @@
   </a>
 
   <a href="https://github.com/toddbirchard/onelogin-getallusers" class="github-card" data-github="toddbirchard/onelogin-getallusers">
-    <h3>onelogin-getallusers</h3>
-    <p>Script to export all users from a Onelogin instance</p>
+    <h3 class="repo-title">onelogin-getallusers</h3>
+    <p class="repo-description">Script to export all users from a Onelogin instance</p>
     <span class="github-card__meta">
       <span class="github-card__language-icon" style="color: #3572A5;">●</span> Python
     </span>
