--- a/src/less/repos.less
+++ b/src/less/repos.less
@@ -11,7 +11,12 @@ body {
   display: flex;
   flex-flow: row;
   flex-wrap: wrap;
-  width: 900px;
+  width: 100%;
+}
+
+.repo-title{
+  font-family: 'CompassSans-Regular',serif;
+  font-size: 18px;
 }
 
 .github-card {
