--- a/partials/githubrepo.hbs
+++ b/partials/githubrepo.hbs
@@ -1,6 +1,6 @@
 <a href="{{url}}" class="github-card" data-github="{{name}}">
     <h3>nexmo-php</h3>
-    <p>{{description}}</p>
+    <p class="repo-description">{{description}}</p>
     <span class="github-card__meta">
       <span class="github-card__language-icon" style="color: #4C5E99;">●</span> PHP
     </span>
