--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -298,6 +298,12 @@
     .container {
       display: block;
     }
+
+  .repo-description{
+    margin: 10px 0;
+    line-height: 1.3;
+  }
+
     .main-content {
       box-shadow: 0 0 5px rgba(65,67,144,.15);
       background: white;
