--- a/partials/article-preview.hbs
+++ b/partials/article-preview.hbs
@@ -6,7 +6,7 @@
       <h5 class="related-title">{{title}}</h5>
       {{#primary_author}}
         {{#if profile_image}}
-          <a href="{{url}}" class="author-mobile"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMMM DD"}}</span></div></a>
+          <a href="{{url}}" class="author-mobile"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><div class="info"><span class="mobile-name">{{slug}}</span><span class="mobile-date">{{date format="MMMM DD"}}</span></div></a>
         {{/if}}
       {{/primary_author}}
     </div>
