--- a/partials/featuredpostpreview.hbs
+++ b/partials/featuredpostpreview.hbs
@@ -7,8 +7,8 @@
 
   {{#if feature_image}}
     <div class="featured-media">
-      <a href="{{url}}"><img src="{{feature_image}}" alt="{{{title}}}"></a>
-      {{!-- div class="postimage" style="background:url({{feature_image}});" alt="{{{title}}}"></div> --}}
+      <a href="{{url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}}" alt="{{{title}}}"></a>
+      {{!-- div class="postimage" style="background:url(https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}});" alt="{{{title}}}"></div> --}}
     </div>
   {{/if}}
 
@@ -30,7 +30,7 @@
             <a href="{{url}}" class="meta-item author"><i class="fas fa-user" style="width:18px; height:18px; display:inline-block; margin-right:10px;"></i><span>{{name}}</span></a>
           {{/unless}}
           {{#if profile_image}}
-            <a href="{{url}}" class="meta-item author"><img src="{{img_url profile_image}}" alt="Author image" class="avi"><span>{{name}}</span></a>
+            <a href="{{url}}" class="meta-item author"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{img_url feature_image absolute="true"}}{{img_url profile_image absolute="true"}}" alt="Author image" class="avi"><span>{{name}}</span></a>
           {{/if}}
         {{/primary_author}}
         <span class="date meta-item"><i class="fal fa-calendar"></i> <span>{{date format="MMMM DD"}}</span></span>
