--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -2,9 +2,9 @@
 <div class="cover author-cover">
 	<div class="avatar-wrap">
 		{{#if profile_image}}
-			<img src="{{profile_image}}" alt="Author image" class="avatar">
+			<img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{profile_image}}" alt="Author image" class="avatar">
 			{{else}}
-			<img src="{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar">
+			<img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar">
 		{{/if}}
 	</div>
 	<h3 class="author-name">
