--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -8,7 +8,7 @@
 <header class="main-header videoHeader">
 		<!-- start logo -->
 	{{#if @blog.logo}}
-		<a class="branding" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}"></a>
+		<a class="branding" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{@blog.logo}}" alt="{{@blog.title}}"></a>
 	{{else}}
 		<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
 	{{/if}}
