--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -2,7 +2,7 @@
 <header class="post-navbar" style="overflow:hidden">
 	<!-- start logo -->
 	<div class="navcontain">
-		<a class="logo" href="{{@blog.url}}"><img src="{{@blog.logo}}"></a>
+		<a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/fetch/{{@blog.logo}}"></a>
 		<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
 		<!-- start navigation -->
 		<nav class="post-navigation">
