--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -3,7 +3,7 @@
 		<li class="nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
 	{{/foreach}}
 	<!--<li id="account">
-		<img src="https://hackersandslackers.nyc3.cdn.digitaloceanspaces.com/user.png">
+		<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/imageshttps://hackersandslackers.nyc3.cdn.digitaloceanspaces.com/user.png">
 		<div class="accountback"></div>
 	</li>-->
 </ul>
