--- a/partials/article-preview.hbs
+++ b/partials/article-preview.hbs
@@ -1,7 +1,7 @@
 
 <div class="article-preview">
   <a href="{{url}}">
-    <div class="img-wrapper " style="background-image: url({{img_url feature_image}});"></div>
+    <div class="img-wrapper " style="background-image: url(https://res.cloudinary.com/hackers-and-slackers/image/upload/images{{img_url feature_image}});"></div>
     <div class="description">
       <h5 class="related-title">{{title}}</h5>
       {{#primary_author}}
