--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -5,7 +5,7 @@
 <header class="main-header videoHeader">
 		<!-- start logo -->
 	{{#if @blog.logo}}
-		<a class="branding" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images{{@blog.logo}}" alt="{{@blog.title}}"></a>
+		<a class="branding" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}"></a>
 	{{else}}
 		<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
 	{{/if}}
