--- a/partials/newheader.hbs
+++ b/partials/newheader.hbs
@@ -1,11 +1,11 @@
 <header>
   <div class="banner">
-    <a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{@blog.logo}}"></a>
+    <a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png"></a>
     <div class="rightnav">
       <div class="flexbox">
         <div class="search">
           <div>
-            <input id="nav-search" type="text" placeholder="     Search all Posts" onfocus="this.placeholder=''" onblur="this.placeholder='     Search all Posts'" required>
+            <input id="nav-search" type="text" placeholder=" Search all Posts" onfocus="this.placeholder=''" onblur="this.placeholder='     Search all Posts'" required>
             <div id="nav-search-results"></div>
           </div>
 
