--- a/default.hbs
+++ b/default.hbs
@@ -7,14 +7,14 @@
 	{{! Page Meta }}
 	<title>{{meta_title}}</title>
 	<meta name="HandheldFriendly" content="True" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 	{{! Styles }}
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	{{! Scripts }}
 	<script type="text/javascript" src="{{@blog.url}}/public/ghost-sdk.min.js"></script>
 	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script async src="{{asset "/js/includes/jquery.md5.js"}}"></script>
+	<script type="text/javascript" src="/assets/js/retina.min.js"></script>
 	<script src="//cdn.jsdelivr.net/g/jquery@1.11.3,honeyjs@1.1.0"></script>
 
 	{{> mongodb}}
