--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -8,7 +8,9 @@
 <script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
 
 <script>
-
-
+// Order matters!!
+$('.post.tag-retina img').attr('data-rjs', 2);
+$('.post.tag-retina-hd img').attr('data-rjs', 3);
+$('.post.tag-retina-4k img').attr('data-rjs', 4);
 </script>
 <!-- end scripts -->
