--- a/partials/seriespreview.hbs
+++ b/partials/seriespreview.hbs
@@ -2,7 +2,7 @@
 <article class="{{post_class}} post-preview">
     {{#if feature_image}}
       <a href="{{url}}" class="featured-media" href="{{url}}">
-        <div class="post-card-image" style="background-image: url({{img_url feature_image absolute="true"}})"></div>
+        <div class="post-card-image" style="background-image: url(https://res.cloudinary.com/hackers-and-slackers/image/upload//images/{{img_url feature_image}})"></div>
       </a>
     {{/if}}
 
