--- a/default.hbs
+++ b/default.hbs
@@ -14,8 +14,7 @@
 	<script type="text/javascript" src="{{@blog.url}}/public/ghost-sdk.min.js"></script>
 	<script src="https://s3.amazonaws.com/stitch-sdks/js/bundles/4.0.8/stitch.js"></script>
 	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script type="text/javascript" src="/assets/js/retina.min.js"></script>
-	<script src="//cdn.jsdelivr.net/g/jquery@1.11.3,honeyjs@1.1.0"></script>
+	<script type="text/javascript" src=<"{{asset ""/js/includes/retina.min.js"}}"></script>
 
 	{{> mongodb}}
 
