--- a/page.hbs
+++ b/page.hbs
@@ -13,7 +13,7 @@
 				<article class="page">
 					{{#if feature_image}}
 					<div class="featured-media">
-						<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/content/images{{basename feature_image}}" alt="{{{title}}}">
+						<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/content/images{{feature_image}}" alt="{{{title}}}">
 					</div>
 					{{/if}}
 					<div class="page-head">
