--- a/custom-series-page.hbs
+++ b/custom-series-page.hbs
@@ -22,7 +22,7 @@
 								{{#foreach tags visibility="internal"}}
 									<div class="tag-wrapper">
 										<a href="{{slug}}">
-											{{#if feature_image}}<div class="img-wrapper>{{feature_image}}</div>{{/if}}
+											{{#if feature_image}}<div class="img-wrapper><img src ="{{feature_image}}" />"</div>{{/if}}
 											<div class="description">
 												<h2>{{meta_title}}</h2>
 												<p>{{description}}</p>
