--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -12,7 +12,7 @@
   {{#if profile_image}}
     <a href="{{url}}" class="avatar-link"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{profile_image}}" alt="Author image" class="avatar"></a>
   {{else}}
-    <a href="{{url}}" class="avatar-link"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar"></a>
+    <a href="{{url}}" class="avatar-link"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{asset "default-user-image.jpg"}}" alt="Author image" class="avatar"></a>
   {{/if}}
   <div class="details">
     <div class="author">
