--- a/partials/widget-sidebarnewsletter.hbs
+++ b/partials/widget-sidebarnewsletter.hbs
@@ -1,3 +1,4 @@
+<!-- start widget -->
 <div id="newsletter-sidebar" class="widget newsletter">
     <h3 class="title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
@@ -17,3 +18,4 @@
     {{/if}}
   </div>
 </div>
+<!-- end tag cloud widget -->
