--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -408,6 +408,35 @@
 		}
 	}
 
+	.series-widget {
+
+		.series-item {
+			background-size: cover;
+			background-position: center;
+			height:90px;
+			width:90px;
+		}
+		.data-analysis-pandas.series-item {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
+		}
+
+		.code-snippet-corner.series-item {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
+		}
+
+		.mysql-life.series-item {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png');
+		}
+
+		.building-flask-apps.series-item {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
+		}
+
+		.create-an-aws-api.series-item {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
+		}
+	}
+
 	.series {
 		.post-title {
 			color: #455f6f;
@@ -435,11 +464,6 @@
 		}
 
 		.series-image {
-			height: 63px;
-			min-width: 90px;
-			display: flex;
-			align-items: center;
-			background-size: cover!important;
 			margin-right: 20px;
 			border-radius: 2px;
 			@media(max-width: 1000px) {
