--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -416,23 +416,23 @@
 			height:90px;
 			width:90px;
 		}
-		.data-analysis-pandas.series-item {
+		.hash-data-analysis-pandas.series-item {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
 		}
 
-		.code-snippet-corner.series-item {
+		.hash-code-snippet-corner.series-item {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
 		}
 
-		.mysql-life.series-item {
+		.hash-mysql-life.series-item {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png');
 		}
 
-		.building-flask-apps.series-item {
+		.hash-building-flask-apps.series-item {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
 		}
 
-		.create-an-aws-api.series-item {
+		.hash-create-an-aws-api.series-item {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
 		}
 	}
