--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -408,13 +408,16 @@
 		}
 	}
 
-	.series-widget {
+
+	.series {
 
 		.series-item {
 			background-size: cover;
 			background-position: center;
 			height:90px;
 			width:90px;
+			min-height: 90PX;
+			min-width: 90px;
 		}
 		.hash-data-analysis-pandas.series-item {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
@@ -435,9 +438,6 @@
 		.hash-create-an-aws-api.series-item {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
 		}
-	}
-
-	.series {
 		.post-title {
 			color: #455f6f;
 			line-height: 1.3;
