--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -411,7 +411,7 @@
 
 	.series {
 
-		.series-item {
+		.series-image {
 			background-size: cover;
 			background-position: center;
 			height:90px;
