--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -419,23 +419,23 @@
 			min-height: 90PX;
 			min-width: 90px;
 		}
-		.hash-data-analysis-pandas.series-item {
+		.pandas {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
 		}
 
-		.hash-code-snippet-corner.series-item {
+		.codesnippetcorner {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
 		}
 
-		.hash-mysql-life.series-item {
+		.mysql {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png');
 		}
 
-		.hash-building-flask-apps.series-item {
+		.flask {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
 		}
 
-		.hash-create-an-aws-api.series-item {
+		.aws-api {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
 		}
 		.post-title {
