--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -412,12 +412,14 @@
 	.series {
 
 		.series-image {
-			background-size: cover;
-			background-position: center;
-			height:90px;
-			width:90px;
-			min-height: 90PX;
+			width: 90px;
 			min-width: 90px;
+			height: 90px;
+			min-height: 90PX;
+			background-position: center !important;
+			background-size: cover !important;
+			display: block;
+			background-repeat: no-repeat;
 		}
 		.pandas {
 			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
