--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -420,26 +420,28 @@
 			background-size: cover !important;
 			display: block;
 			background-repeat: no-repeat;
-		}
-		.pandas {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
+
+			&.pandas {
+				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
+			}
+
+			&.codesnippetcorner {
+				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
+			}
+
+			&.mysql {
+				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png');
+			}
+
+			&.flask {
+				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
+			}
+
+			&.aws-api {
+				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
+			}
 		}
 
-		.codesnippetcorner {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
-		}
-
-		.mysql {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png');
-		}
-
-		.flask {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
-		}
-
-		.aws-api {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
-		}
 		.post-title {
 			color: #455f6f;
 			line-height: 1.3;
