--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -411,6 +411,26 @@
 
 	.series {
 
+		.pandas {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
+		}
+
+		.codesnippetcorner {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
+		}
+
+		.mysql {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png');
+		}
+
+		.flask {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
+		}
+
+		.aws-api {
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
+		}
+
 		.series-image {
 			width: 90px;
 			min-width: 90px;
@@ -421,25 +441,7 @@
 			display: block;
 			background-repeat: no-repeat;
 
-			&.pandas {
-				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/panda-icon.png');
-			}
 
-			&.codesnippetcorner {
-				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/python-icon.png');
-			}
-
-			&.mysql {
-				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png');
-			}
-
-			&.flask {
-				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/flask-icon.png')
-			}
-
-			&.aws-api {
-				background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/api-icon.png')
-			}
 		}
 
 		.post-title {
