--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -420,7 +420,7 @@
 		}
 
 		.mysql {
-			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/mysql-icon.png');
+			background:url('https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544177202/icons/dolphin-icon.png');
 		}
 
 		.flask {
@@ -437,7 +437,7 @@
 			height: 60px;
 			min-height: 60PX;
 			background-position: center !important;
-			background-size: cover !important;
+			background-size: contain !important;
 			display: block;
 			background-repeat: no-repeat;
 
