wrong cloudinary URLs

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -44,7 +44,7 @@
 		transition: all 0.3s ease-out;
 		position: relative;
 
-		@media(max-width: 600px){
+		@media(max-width: 800px){
 			width: -webkit-fill-available;
 			max-width: none;
 		}
@@ -240,7 +240,8 @@
 	.contributors {
 		.single-author-name {
 			font-size: 0.9em !important;
-			font-family: CompassSans-Medium, sans-serif !important;
+			font-family: 'CompassSans-Medium', sans-serif !important;
+
 		}
 
 		.role {
@@ -322,7 +323,7 @@
 				font-weight: 200;
 				font-family: 'CompassSans-Medium', serif;
 				transition: all 0.2s ease;
-				border-bottom: 1px dashed rgba(53, 37, 68, 0.29) !important;
+				border-bottom: 1px dashed rgba(90, 87, 93, 0.29) !important;
 
 				&:last-child {
 					border-bottom: none !important;
@@ -426,5 +427,9 @@
 
 	.widget.tag {
 		min-width: 34%;
+
+		@media(max-width: 600px){
+			padding: 0;
+		}
 	}
 }
