--- a/src/less/postpreview.less
+++ b/src/less/postpreview.less
@@ -263,6 +263,11 @@
 				i {
 					font-size: 22px;
 					height: 20px;
+
+					@media(max-width: 600px) {
+						font-size: 18px;
+						height: 18px;
+					}
 				}
 				@media(max-width: 800px) {
 					display: none;
@@ -273,12 +278,7 @@
 					font-size: 1em;
 					margin: 0;
 					max-height: 33px;
-					padding: 3px 10px;
-
-					span,
-					i {
-						font-size: 12px;
-					}
+					padding: 4px 12px;
 
 					span {
 						font-size: 13px;
@@ -286,7 +286,7 @@
 					}
 
 					i {
-						height: 12px;
+						height: 13px;
 						margin-right: 3px;
 						font-weight: 400;
 					}
