--- a/src/less/post.less
+++ b/src/less/post.less
@@ -714,7 +714,7 @@
 			margin-left: 10px;
 			padding-left: 0;
 			margin-bottom: 30px;
-			margin-top: 0;
+			margin-top: 20px;
 
 			@media(max-width:600px) {
 				margin: 0 15px;
