--- a/partials/signup2.hbs
+++ b/partials/signup2.hbs
@@ -42,7 +42,7 @@
     $('#signup-subscription').css('opacity', 0);
     $('#signup-subscription').css('position', 'absolute');
     $('#signup-form').ajaxForm({
-      beforeSubmit: validate();
+      beforeSubmit: validate()
     });
   });
 </script>
