--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -22,6 +22,7 @@
 @text-post-header: #20809c;
 
 @base-url: 'https://hackersandslackers.com/';
+@assets: '../../assets/'
 
 @facebook-color: #3b5998;
 @medium-color: #000;
