--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -5,6 +5,7 @@
 ====================================================*/
 .sidebar {
 	min-width: 300px;
+	max-width: 400px;
 
 	.search {
 		position: relative;
