--- a/src/less/repos.less
+++ b/src/less/repos.less
@@ -22,6 +22,11 @@ body {
 
   &:hover {
     color: white;
+
+    .repo-title,
+    .github-card__meta {
+      color: white;
+    }
   }
 }
 
@@ -35,7 +40,7 @@ body {
   text-decoration: none;
   font-size: 13px;
   flex: 1;
-  min-width: 250px;
+  min-width: 32%;
   border-radius: 3px;
 
    h3 {
