--- a/series.hbs
+++ b/series.hbs
@@ -9,6 +9,7 @@
 			{{> sidebar}}
 				<!-- start main post area -->
 				<div class=" main-content">
+					{{> cover-tag}}
 					<div class="postlist">
 						<div class="sort-container">
 							<div class="sort">
