--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -7,7 +7,7 @@
 
   {{#if feature_image}}
         <a href="{{url}}" class="featured-media" href="{{url}}">
-          <div class="post-card-image" style="background-image: url(https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{img_url feature_image}})"></div>
+          <div class="post-card-image" style="background-image: url({{img_url feature_image}})"></div>
         </a>
   {{/if}}
 
