--- a/custom-projects.hbs
+++ b/custom-projects.hbs
@@ -14,7 +14,7 @@
 				{{/if}}
 				<h1>{{{title}}}</h1>
 				<p>{{content}}</p>
-				<h3>Our Projects</h3>
+				<h3>Our Github Repos</h3>
 				<div class="github-cards">
 					<a href="https://github.com/toddbirchard/ghosttheme-stockholm" class="github-card" data-github="toddbirchard/ghosttheme-stockholm">
 						<h3 class="repo-title">ghosttheme-stockholm</h3>
