--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -31,7 +31,7 @@
 	@media(max-width: 800px) {
 		margin-top: 10px;
 		display: block;
-		padding: 30px;
+		padding: 0px 20px 20px;
 	}
 
 	#newsletter-footer {
