--- a/post.hbs
+++ b/post.hbs
@@ -13,7 +13,7 @@
 						<h4 class="excerpt">{{excerpt}}</h4>
 						{{#if feature_image}}
 							<div class="featured-media">
-								<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{img_url feature_image}}" alt="{{{title}}}">
+								<img src="{{img_url feature_image}}" alt="{{{title}}}">
 							</div>
 						{{/if}}
 
