no more messed up html code blocks

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -539,8 +539,8 @@
     }
   }
 
-  .javascript,
-  .language-javascript {
+  pre > .javascript,
+  pre > .language-javascript {
     font-size: 14px;
     line-height: 1.6;
     direction: ltr;
