no more messed up html code blocks

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -467,7 +467,8 @@
     }
   }
 
-  .hljs.css .language-css {
+  pre > .hljs.css,
+  pre > .language-css {
     &::before {
       margin-bottom: 20px;
       margin-left: -40px;
