no more messed up html code blocks

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -466,7 +466,7 @@
       position: relative;
     }
   }
-
+/*
   pre > .hljs.css,
   pre > .language-css {
     &::before {
@@ -484,7 +484,7 @@
       position: relative;
     }
   }
-
+*/
   .hljs.ini,
   .language-ini {
     &::before {
