--- a/src/less/post.less
+++ b/src/less/post.less
@@ -23,6 +23,10 @@
 		}
 	}
 
+	& > p {
+    margin: 0 0 30px;
+  }
+
 	.embedly-card {
 		@media(max-width: 600px) {
 			margin-left: calc(~"-50vw + 50%") !important;
