no more messed up html code blocks

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -467,6 +467,10 @@
 	.post-content {
 		margin: 10px 60px 30px;
 
+		& > p {
+			 margin: 0 0 30px;
+		}
+
 		a {
 			color: @theme-color;
 			font-family: 'CompassSans-Regular';
