no more messed up html code blocks

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -71,6 +71,10 @@
 		}
 	}
 
+	.cp_embed_wrapper {
+		margin-top:30px;
+	}
+
 	.excerpt {
 		font-weight: 100;
 		font-size: 1.4em;
@@ -467,7 +471,7 @@
 	.post-content {
 		margin: 10px 60px 30px;
 
-		& > p {
+		p {
 			 margin: 0 0 30px;
 		}
 
