no more messed up html code blocks

--- a/src/less/post.less
+++ b/src/less/post.less
@@ -73,6 +73,7 @@
 
 	.cp_embed_wrapper {
 		margin-top:30px;
+		margin-bottom:30px;
 	}
 
 	.excerpt {
@@ -472,7 +473,7 @@
 		margin: 10px 60px 30px;
 
 		p {
-			 margin: 0 0 30px;
+			 margin: 0 0 30px !important;
 		}
 
 		a {
@@ -644,8 +645,8 @@
 		margin-top: -10px;
 		width: 100%;
 		@media(max-width: 600px) {
-			margin-top: 0;
-			font-size: 14px !important;
+			margin-top: -5px;
+			font-size: 12px !important;
 			padding: 10px 0;
 			height: auto;
 			line-height: 1.5;
@@ -729,7 +730,7 @@
 			margin-top: 20px;
 
 			@media(max-width:600px) {
-				margin: 0 15px;
+				margin: 15px 15px 0;
 				padding-left: 0;
 			}
 
