no more messed up html code blocks

--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -260,4 +260,16 @@
       color: #3d5075 !important;
     }
   }
+
+  .data-visualization {
+    background: #c7f3f1;
+    color:  #72a7a7 !important;
+
+    * {
+      color: #72a7a7 !important;
+    }
+  }
+
+
+
 }
