scrollable mobile tables

--- a/src/less/tags.less
+++ b/src/less/tags.less
@@ -263,10 +263,10 @@
 
   .datavis {
     background: #c7f3f1;
-    color:  #72a7a7 !important;
+    color:  #5a8a8a !important;
 
     * {
-      color: #72a7a7 !important;
+      color: #5a8a8a !important;
     }
   }
 
