--- a/src/less/post.less
+++ b/src/less/post.less
@@ -65,6 +65,7 @@
 		a {
 			color: @h1-color;
 			transition: all 0.2s ease-out;
+			font-family: 'HackerSans-Medium', 'CompassSans-Medium' !important;
 
 			&:hover {
 				color: @secondary-color;
