--- a/partials/author-card.hbs
+++ b/partials/author-card.hbs
@@ -10,7 +10,7 @@
   {{/if}}
   <div class="author-specs">
   {{#if profile_image}}
-    <a href="{{url}}" class="avatar-link"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{profile_image}}" alt="Author image" class="avatar"></a>
+    <a href="{{url}}" class="avatar-link"><img src="{{img_url profile_image}}" alt="Author image" class="avatar"></a>
   {{else}}
     <a href="{{url}}" class="avatar-link"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/images/{{asset "default-user-image.jpg"}}" alt="Author image" class="avatar"></a>
   {{/if}}
