--- a/partials/cover-author.hbs
+++ b/partials/cover-author.hbs
@@ -2,7 +2,7 @@
 <div class="cover author-cover">
 	<div class="avatar-wrap">
 		{{#if profile_image}}
-			<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544204393/images{{profile_image}}" alt="Author image" class="avatar">
+			<img src="{{img_url profile_image}}" alt="Author image" class="avatar">
 			{{else}}
 			<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544204393/images{{asset "images/default-user-image.jpg"}}" alt="Author image" class="avatar">
 		{{/if}}
