--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -78,8 +78,6 @@
 				color: grey;
 			}
 
-
-
 			button {
 				width: 100%;
 				background: #039c8c;
@@ -104,7 +102,7 @@
 				border: 1px solid #d5dbe6;
 				transition: all 0.3s all;
 				width: 100%;
-				margin-bottom: 10px;
+				margin-bottom: 0;
 				padding: 14px 15px;
 				border: 0;
 				border-radius: 3px;
