--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -314,7 +314,7 @@
 				border: 1px solid #d5dbe6 !important;
 				transition: all 0.3s all;
 				width: -webkit-fill-available;
-				margin-bottom: 10px;
+				margin-bottom: 0;
 				padding: 14px 15px;
 				border: 0;
 				border-radius: 3px;
